# cocoboard

./: CMakeLists.txt  main.cpp
cmake/: stm32f411.cmake
